# c_unicode_test

./: CMakeLists.txt  README.md  regen.ps1  regen.sh
src/: main.c  test.c
